FIxed background & small screens
Fixed text size on small screens (otherwise even one word is too big for some screens). And better floating background.

--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -67,26 +67,32 @@ body {
 }
 .float {
   z-index: -1;
-  border-radius: 50% 0 0 50%;
+  /* border-radius: 50% 0 0 50%; */
   position: absolute;
   position: fixed;
-  top: 0;
-  right: 0;
-  width: 15%;
-  height: 200vh;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 100%;
   background-color: darkslategray;
+  transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
+  box-shadow: 2px 2px 10px green;
   animation: floatIn 5s ease-in-out infinite alternate;
 }
 @keyframes floatIn {
   0% {
-    width: 15%;
-    border-radius: 10% 0 0 10%;
+    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
   }
   70% {
-    width: 75%;
-    border-radius: 30% 0 0 30%;
+    transform: translate(-50%, -50%) rotate(0deg) scaleY(0.8);
   }
   90% {
-    border-radius: 50% 0 0 0;
+    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
+  }
+}
+
+@media (max-width: 550px) {
+  .welcome-message {
+    font-size: 1.3rem;
   }
 }
